objects/Product_Feature_Level_1__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_1_Number__c</fullName>
        <displayFormat>PFL1-{000000}</displayFormat>
        <label>Product Feature Level 1 Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Product Feature Levels 1</relationshipLabel>
        <relationshipName>Product_Feature_Levels_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Product_Feature_Level_1_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Feature Level 1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Feature Level 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Feature Levels 1</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>